test/function/missing_arguments.cipl.out
::stdout::

::stderr::
Error: Expected 2 arguments but got 1 for <proc f>() at line 4
