test/function/missing_arguments.cipl
proc f(a, b):
    pass

f(1)